tdf#92296: Fix off-by-one formatting of text runs on OOXML export

This essentially reverts commit 8865ed2efecd03722d10e522265f31c99b13b2bb
and implements a different fix for tdf#90812:
If the formatting of entire cell is uniform, remove formatting of the
leading text run and create corresponding cell style. In all other cases,
write out formattings for each individual run.

Change-Id: I7724b7a474f773f2cdc39e9150d843642fb05bbe
Reviewed-on: https://gerrit.libreoffice.org/19811
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>

Related tdf#92296, tdf#90812: Make this test more strict

i.e. not only make sure that rPr is there, but also test the text
chunk has the right font colour ( it went off-by-one in regression
caused by the fix of tdf#90812 )

Change-Id: I3788a845393686ed621743e117b7eb439e38e0b3
Reviewed-on: https://gerrit.libreoffice.org/22420
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: David Tardon <dtardon@redhat.com>